--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
     "name": "react-portfolio",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://AmanpreetSingh0071.github.io/Aman_portfolio",
+    "homepage": "https://amanpreetsingh0071.github.io/Aman_portfolio",
     "dependencies": {
         "bootstrap": "^5.2.3",
         "emailjs-com": "^3.2.0",
-        "gh-pages": "^6.3.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.0",
         "react-dom": "^18.2.0",
@@ -43,5 +42,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^6.3.0"
     }
 }
