--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "homepage": "https://amanpreetsingh0071.github.io/Aman_portfolio",
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
         "bootstrap": "^5.2.3",
-        "emailjs-com": "^3.2.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.0",
         "react-dom": "^18.2.0",
